adding kraken icon in index page

--- a/app/views/planets/index.html.erb
+++ b/app/views/planets/index.html.erb
@@ -37,7 +37,7 @@
       <div class="card-planet-infos-price">
         <p>Rate:</p>
         <div class="card-planet-pricing">
-          <p><%= planet.rate %></p>
+          <p><%= planet.rate %> <i class="fab fa-gitkraken"></i></p>
         </div>
       </div>
 
