Fixed currency symbol on booking page

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -45,15 +45,15 @@
         </div>
           <div class="total-resume">
             <div class="total-row">
-              <p>Service Fee</p><span>1000  <i class="fab fa-gitkraken"></i></span>
+              <p>Service Fee:</p><span>1000&nbsp;<i class="fab fa-gitkraken"></i></span>
             </div>
             <div class="total-row">
-              <p>Total:</p><span class="total">0  <i class="fab fa-gitkraken"></i></span>
+              <p>Total:</p><span> <span class="total">0</span>&nbsp;<i class="fab fa-gitkraken"></i></span>
             </div>
           </div>
 
           <input type="number" value="<%= @planet.rate %>" disabled class="form-control" id="price-input" name="price-cents" style="visibility: hidden;">
-          <input type="submit" value='BOOK ME!' class="btn-rounded" id="submit">
+          <input type="submit" value='INVADE ME!' class="btn-rounded" id="submit">
       </div>
   </div>
   <% end %>
