fix the nav bar color

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -17,6 +17,24 @@
   align-items: baseline;
 }
 
-.nav-item{
+#menu-1{
+.nav-link{
   color: $btn-color;
+  }
 }
+#menu-2{
+  .nav-link{
+  color: $btn-color;
+  }
+}
+#menu-3{
+  .nav-link{
+  color: $btn-color;
+  }
+}
+#menu-4{
+  .nav-link{
+  color: $btn-color;
+  }
+}
+
