--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,15 +11,15 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <li class="nav-item">
+        <li class="nav-item" id="menu-1">
 
           <%= link_to "Explore", planets_path, class: "nav-link" %>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item" id="menu-2">
           <%= link_to "Dashboard", dashboard_path, class: "nav-link" %>
         </li>
         <% if current_user.overlord? %>
-        <li class="nav-item">
+        <li class="nav-item" id="menu-3">
           <%= link_to "Create a planet", new_planet_path, class: "nav-link" %>
         </li>
         <% end %>
@@ -39,7 +39,7 @@
           </div>
         </li>
       <% else %>
-        <li class="nav-item">
+        <li class="nav-item" id="menu-4">
           <%= link_to "Login", new_user_session_path, class: "nav-link" %>
         </li>
       <% end %>
