Fixed various details

--- a/app/views/planets/edit.html.erb
+++ b/app/views/planets/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>coming soon</h1>
+<div class="container mt-5">
+  <h1>Terraform Control Center</h1>
 
-<%= render "planet_form" %>
+  <%= render "planet_form" %>
+</div>
