--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -196,14 +196,14 @@
 <% end %>
 </div>
 
-  <% @bookings.each do |booking| %>
+  <% @bookings.reverse.each do |booking| %>
   <% unless booking.approved? %>
        <div class="trip-card">
         <%= link_to booking_path(booking), method: :delete, class: "destroy-icon", title: 'Abort',data: {confirm: "Are you sure you want to abort this invasion?"}  do %>
           <i class="fas fa-times"></i>
         <% end %>
           <div class="trip-notif">
-             <% if current_user.avatar.attached? %>
+             <% if booking.planet.user.avatar.attached? %>
                <%= cl_image_tag booking.planet.user.avatar.key, class: "avatar" %>
              <% else %>
                <%= image_tag "no-profile.png", class: "avatar" %>
