--- a/app/views/planets/_planet_form.html.erb
+++ b/app/views/planets/_planet_form.html.erb
@@ -1,11 +1,14 @@
 <% env_lab = lambda { |env| "<i class=\"#{env.icon}\"></i> | #{env.name}".html_safe } %>
+<% rate_lab = lambda { |env| "<i class=\"fab fa-gitkraken\"></i>".html_safe } %>
 
 <div class="stella-form">
 <%= simple_form_for @planet do |f| %>
   <%= f.input :name %>
   <%= f.input :description %>
-  <%= f.input :rate%>
+  <%= f.input :rate, label: "Rate <i class=\"fab fa-gitkraken\"></i>".html_safe%>
   <%= f.input :capacity %>
+  <%= f.input :latitude %>
+  <%= f.input :longitude %>
   <%= f.association :environments, as: :check_boxes, label_method: env_lab %>
   <%= f.input :photos, as: :file, input_html: { multiple: true } %>
   <%= f.button :submit, class:"btn-rounded" %>
