fixe show page and dashboard and button

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -5,6 +5,7 @@
   background: $btn-color;
   transition: background 0.3s ease;
   text-align: center;
+  margin-right: 16px;
 }
 
 .btn-rounded:hover {
